--- a/app/src/main/res/layout-land/content_management_chalet.xml
+++ b/app/src/main/res/layout-land/content_management_chalet.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/chaletTitle0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/chaletTitle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -50,6 +52,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/chaletTitle2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -73,12 +76,12 @@
                 android:id="@+id/chaletFromText0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/from"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -91,12 +94,12 @@
                 android:id="@+id/chaletToText0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/to"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -109,11 +112,11 @@
                 android:id="@+id/chaletNumberText0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="8"
+                android:ems="9"
                 android:inputType="number"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="Chalé ##" />
+                app:mask="Chalet ##" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -132,12 +135,12 @@
                 android:id="@+id/chaletFromText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/from"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -150,12 +153,12 @@
                 android:id="@+id/chaletToText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/to"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -168,11 +171,11 @@
                 android:id="@+id/chaletNumberText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="8"
+                android:ems="9"
                 android:inputType="number"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="Chalé ##" />
+                app:mask="Chalet ##" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -191,12 +194,12 @@
                 android:id="@+id/chaletFromText2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/from"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -209,12 +212,12 @@
                 android:id="@+id/chaletToText2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/to"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -227,11 +230,11 @@
                 android:id="@+id/chaletNumberText2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="8"
+                android:ems="9"
                 android:inputType="number"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="Chalé ##" />
+                app:mask="Chalet ##" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -250,12 +253,12 @@
                 android:id="@+id/chaletFromText3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/from"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -268,12 +271,12 @@
                 android:id="@+id/chaletToText3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/to"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -286,11 +289,11 @@
                 android:id="@+id/chaletNumberText3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="8"
+                android:ems="9"
                 android:inputType="number"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="Chalé ##" />
+                app:mask="Chalet ##" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -309,12 +312,12 @@
                 android:id="@+id/chaletFromText4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/from"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -327,12 +330,12 @@
                 android:id="@+id/chaletToText4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="7"
                 android:hint="@string/to"
                 android:inputType="date"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="##/##/####" />
+                app:mask="##/####" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -345,11 +348,188 @@
                 android:id="@+id/chaletNumberText4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="8"
+                android:ems="9"
                 android:inputType="number"
                 android:maxLines="1"
                 android:singleLine="true"
-                app:mask="Chalé ##" />
+                app:mask="Chalet ##" />
+
+        </android.support.design.widget.TextInputLayout>
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletFromLayout5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletFromText5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="7"
+                android:hint="@string/from"
+                android:inputType="date"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="##/####" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletToLayout5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletToText5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="7"
+                android:hint="@string/to"
+                android:inputType="date"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="##/####" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletNumberLayout5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletNumberText5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="9"
+                android:inputType="number"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="Chalet ##" />
+
+        </android.support.design.widget.TextInputLayout>
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletFromLayout6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletFromText6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="7"
+                android:hint="@string/from"
+                android:inputType="date"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="##/####" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletToLayout6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletToText6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="7"
+                android:hint="@string/to"
+                android:inputType="date"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="##/####" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletNumberLayout6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletNumberText6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="9"
+                android:inputType="number"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="Chalet ##" />
+
+        </android.support.design.widget.TextInputLayout>
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletFromLayout7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletFromText7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="7"
+                android:hint="@string/from"
+                android:inputType="date"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="##/####" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletToLayout7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletToText7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="7"
+                android:hint="@string/to"
+                android:inputType="date"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="##/####" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/chaletNumberLayout7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.vicmikhailau.maskededittext.MaskedEditText
+                android:id="@+id/chaletNumberText7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="9"
+                android:inputType="number"
+                android:maxLines="1"
+                android:singleLine="true"
+                app:mask="Chalet ##" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -370,5 +550,3 @@
     </TableRow>
 
 </TableLayout>
-
-
